# drl-cybergenetics

./: Advanced Model-Free Control of Engineered Cells - Ecoli - BPF.ipynb  Advanced Model-Free Control of Engineered Cells - Ecoli.ipynb  Advanced Model-Free Control of Engineered Cells - Yeast.ipynb  Advanced Model-Free Control of Engineered Cells.ipynb  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
drl_crn/: __init__.py
drl_crn/agent/: a2c.py  ddpg.py  dqn.py  sac.py
drl_crn/data/: __init__.py
drl_crn/interactor/: evaluator.py  trainer.py
drl_crn/nn/: __init__.py  approximator.py
drl_crn/utils/: __init__.py  batch_scheduler.py  bs_scheduler.py  episodic_logger.py  exploration_scheduler.py
drl_cybergenetics/: __init__.py
drl_cybergenetics/agent/: ppo.py
drl_cybergenetics/agents/: README.md  __init__.py  agent.py  ddqn.py  dummy.py  td3.py  vpg.py
drl_cybergenetics/data/: buffer.py  segment_tree.py
drl_cybergenetics/envs/: README.md  config.py  crn.py
drl_cybergenetics/nn/: __init__.py  actor.py  critic.py
examples/: Advanced Model-Free Control of Engineered Cells - Ecoli.ipynb
pytorch_drl/: __init__.py
pytorch_drl/agent/: __init__.py  agent.py  ddpg.py  dqn.py  dummy.py
pytorch_drl/env/: __init__.py  crn_env.py  wrappers.py
pytorch_drl/nn/: __init__.py  actor.py  approximator.py  critic.py
pytorch_drl/trainer/: __init__.py  dummy.py  off_policy.py  trainer.py
pytorch_drl/utils/: __init__.py  bs_scheduler.py  episodic_logger.py  er_scheduler.py  plotter.py  replay_buffer.py  (+1 more)
(+21 files in other folders)
