[tool.poetry]
name = "drl_cybergenetics"
version = "0.1.0"
description = "DRL for Cybergenetics"
authors = ["imyizhang"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
